@@ -1,0 +1,13 @@
+.. _ref-tools-index:
+
+=====
+Tools
+=====
+
+Tools API reference.
+
+.. toctree::
+    :maxdepth: 1
+
+    misc
+    singleton
